--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT = 8000
 SECRET_KEY = touy
 SAL_I = 1
+CLOUDINARY_NAME = dzjf5siz3
+CLOUDINARY_API_KEY = 629378774136477
+CLOUDINARY_API_SECRET_KEY = ssMUX-oZ3u4LThs6rLU37MhHc94
