--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ SAL_I = 1
 CLOUDINARY_NAME = dzjf5siz3
 CLOUDINARY_API_KEY = 629378774136477
 CLOUDINARY_API_SECRET_KEY = ssMUX-oZ3u4LThs6rLU37MhHc94
+DATABASE_URL = 'mysql://wla38ejnqt3ttzu02c43:pscale_pw_5aj7cjBSAcC5H13s4Z3uupmFg7VtUPTOnMeccTShkVF@us-east.connect.psdb.cloud/test?ssl={"rejectUnauthorized":true}'
